--- a/assingment-spring_hibernate/.project
+++ b/assingment-spring_hibernate/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>assingment-sprihib</name>
+	<name>assingment-spring_hibernate</name>
 	<comment></comment>
 	<projects>
 	</projects>
